--- a/frontend/view/user/search.html
+++ b/frontend/view/user/search.html
@@ -29,6 +29,7 @@
           <input
             class="search-txt"
             type="text"
+            v-model="searchQuery"
             placeholder="  찾으시는 식당을 검색해주세요."
           />
           <button class="search-btn" type="submit">
