--- a/frontend/view/user/stores.html
+++ b/frontend/view/user/stores.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>모든 식당</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
     <link href="/css/user/header.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
+      <h1>헤더는 왜 안나올까</h1>
       <header-component></header-component>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="/js/Header.js"></script>
-    <script>
-      new Vue({});
-    </script>
+    <!-- 컴포넌트 등록 파일 -->
+    <script src="/js/your-main-vue-instance.js"></script>
+    <!-- Vue 인스턴스 생성 파일 -->
   </body>
 </html>
