--- a/frontend/css/user/storeDetail.css
+++ b/frontend/css/user/storeDetail.css
@@ -118,17 +118,17 @@ h2 {
 }
 
 .cButton {
-    padding: 10px 40px; /* 버튼 여백 */
-    background-color: lightgrey; /* 버튼 배경색 */
-    color: white; /* 버튼 글자색 */
+    flex: 1; /* 각 버튼이 같은 비율로 공간을 차지하도록 설정 */
+    padding: 10px 0; /* 버튼 여백 */
     border: black 1px solid; /* 테두리 제거 */
     border-radius: 1px; /* 모서리 둥글게 */
     cursor: pointer; /* 커서를 포인터로 변경 */
     transition: background-color 0.3s; /* 배경색 변화 애니메이션 */
+    text-align: center; /* 텍스트 가운데 정렬 */
 }
 
 .cButton:hover {
-    background-color: gray; /* 호버 시 배경색 변화 */
+    background-color: orange; /* 호버 시 배경색 변화 */
 } 
 /* 섹션 버튼 */
 
