--- a/frontend/view/owner/reserve.html
+++ b/frontend/view/owner/reserve.html
@@ -107,6 +107,38 @@
               >
                 <h6 class="mb-0">전체 예약 목록</h6>
               </div>
+              <div class="mb-3 d-flex">
+                <input
+                  v-model="searchCustomerName"
+                  class="form-control me-2"
+                  type="text"
+                  placeholder="고객명으로 검색"
+                />
+              </div>
+              <div class="mb-3 d-flex">
+                <input
+                  v-model="searchStartDate"
+                  class="form-control"
+                  type="date"
+                  placeholder="시작일"
+                />
+
+                <input
+                  v-model="searchEndDate"
+                  class="form-control"
+                  type="date"
+                  placeholder="종료일"
+                />
+              </div>
+              <div class="mb-3 d-flex justify-content-end">
+                <button
+                  class="btn btn-primary ms-2"
+                  style="width: 200px"
+                  @click="searchReserves();"
+                >
+                  검색
+                </button>
+              </div>
               <div class="table-responsive">
                 <table
                   class="table text-start align-middle table-bordered table-hover mb-0"
