관리자 리뷰관리 / 리뷰삭제,삭제거절 기능
관리자 리뷰 페이지
리뷰 삭제/거절 기능 구현

--- a/frontend/css/admin/mainlogo.css
+++ b/frontend/css/admin/mainlogo.css
@@ -48,3 +48,13 @@ a {
 .menu-price {
   white-space: nowrap; /* 가격 텍스트 줄바꿈 방지 */
 }
+
+.thumbnail_image {
+  width: 250px;
+  height: 180px;
+  margin:10px;
+}
+.thumbnail-container {
+  overflow-x: auto;          /* 가로 스크롤 허용 */
+  white-space: nowrap;        /* 한 줄에 이미지 나열 */
+}
