--- a/frontend/view/admin/srAdminReviews.html
+++ b/frontend/view/admin/srAdminReviews.html
@@ -15,6 +15,7 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/css/admin/style.css" rel="stylesheet" />
     <link href="/css/admin/mainlogo.css" rel="stylesheet">
+    <link href="/css/admin/srAdminReviews.css" rel="stylesheet">
 
     <!-- JavaScript Libraries -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
@@ -57,19 +58,11 @@
         <!-- Navbar End -->
 
         <div class="container-fluid pt-4 px-4">
-          <div class="row g-4" v-if="reserveLists">
+          <div class="row g-4" v-if="reviewLists">
             <div class="col-sm-12 col-xl-12">
               <div class="bg-light text-center rounded p-4">
                 <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">예약 내역 조회</h6>
-                </div>
-                <div class="py-2 my-3 border rounded">예약 현황별 검색
-                  <div class="d-flex justify-content-around">
-                    <div v-for="(filter, index) in reserveStatusFilters" :key="filter.statusCodeId">
-                      <input type="checkbox" class="btn-check" :id="'btn-filter'+index" autocomplete="off" :value="filter.statusCodeId" v-model="selectedFilter.statusCodeId" @change="fetchReserveLists">
-                      <label class="btn btn-outline-primary" :for="'btn-filter'+index">{{filter.status}}</label>
-                    </div>
-                  </div>
+                  <h6 class="mb-0">리뷰 내역 조회</h6>
                 </div>
                 <div class="py-2 my-3 border rounded d-flex justify-content-center">
                   <div class="w-50 input-group">
@@ -84,18 +77,13 @@
                         <label class="p-2" for="userName">회원명</label>
                       </li>
                     </ul>
-                    <input class="form-control" type="text" v-model="selectedFilter.searchQuery" @keyup.enter="fetchReserveLists">
-                    <button class="btn btn-success" @click="fetchReserveLists">검색</button>
+                    <input class="form-control" type="text" v-model="selectedFilter.searchQuery" @keyup.enter="fetchReviews">
+                    <button class="btn btn-success" @click="fetchReviews">검색</button>
                   </div>
                 </div>
-                
-                <div class="py-2 my-3 border rounded">선택 예약 일괄 변경
-                  <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary mx-2" @click="updateStatus(1)">대기 상태로</button>
-                    <button type="button" class="btn btn-outline-success mx-2" @click="updateStatus(2)">승인처리</button>
-                    <button type="button" class="btn btn-outline-danger mx-2" @click="updateStatus(3)">취소처리</button>
-                    <button type="button" class="btn btn-outline-primary mx-2" @click="updateStatus(4)">완료처리</button>
-                  </div>
+                <div class="col text-start">
+                  <label class="list-group-item px-3 py-2">
+                  <input class="form-check-input me-1" type="checkbox" @change="fetchReviews" v-model="checkDeleteReqOnly" style="width:20px; height: 20px;"> 삭제 요청된 리뷰만 보기</label>
                 </div>
               </div>
             </div>
@@ -104,7 +92,7 @@
                 
                 <div class="row">
                   <div class="col text-start">
-                    <span>검색된 예약수 : {{ reserveCount }}</span>
+                    <span>검색된 리뷰 : {{ reviewCount }}</span>
                   </div>
                   <div class="col text-center">
                     <div id="pagination text-center">
@@ -125,7 +113,7 @@
                   </div>
                   <div class="col text-end">
                     <span>페이지당 갯수</span>
-                    <select v-model="pageSize" @change="fetchReserveLists" name="pageSize">
+                    <select v-model="pageSize" @change="fetchReviews" name="pageSize">
                       <option value="5">5</option>
                       <option value="10" selected>10</option>
                       <option value="50">50</option>
@@ -133,80 +121,44 @@
                     </select>
                   </div>
                 </div>
-                
+                <!-- 본문 -->
                 <div class="row">
-                  <div class="col text-start">
-                    <label class="list-group-item px-3 py-2">
-                    <input class="form-check-input me-1" type="checkbox" value="all" v-model="selectAll" @change="toggleSelectAll" style="width:20px; height: 20px;"> 모두 체크</label>
-                  </div>
-                </div>
-                <div class="card mb-3" v-for="(reserve, index) in paginatedReserves" :key="reserve.reserveId">
-                  <div class="card-header">
-                    <label class="list-group-item">
-                      <input class="form-check-input me-1 reserveCheckbox" name="reserveCheckbox" type="checkbox" v-model="checkedReserveIds" :value="reserve.reserveId" style="width: 20px; height: 20px;">
-                      예약번호 {{ reserve.reserveId}}. {{ reserve.storeName }} ({{ reserve.storeId }})
-                    </label>
-                    <!-- <h3><p :class="['badge', badge(reserve)]">{{ reserve.statusCodeType }}</p></h3> -->
-                  </div>
-                  <div class="card-body">
-                    <blockquote class="blockquote mb-0">
+                  <div v-if="reviewCount > 0" class="col-sm-12 col-xl-12 card mb-3" v-for="(review, index) in paginatedReviews" :key="review.reviewId">
+                    <div class="card-header">
                       <div class="row">
                         <div class="col">
-                          <table class="table table-borderless">
-                            <tbody>
-                              <tr>
-                                <td>예약자명</td>
-                                <td>{{ reserve.userName }}</td>
-                              </tr>
-                              <tr>
-                                <td>예약 회원명</td>
-                                <td>{{ reserve.name }}</td>
-                              </tr>
-                              <tr>
-                                <td>요청사항</td>
-                                <td>{{ reserve.memo }}</td>
-                              </tr>
-                              <tr>
-                                <td colspan="2" class="text-warning">{{ dateFormat(reserve.reserveTime) }} · {{ reserve.people }} 명</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                          <ul>
-                            <li>{{ menuSummary(reserve.payHistories) }}</li>
-                          </ul>
+                          <label class="list-group-item">
+                            <span class="">작성자 : <img :src="review.profileImageUrl" class="profileImage rounded-circle"> 윤희성</span>
+                            <p><i v-for="sc in review.score" class="fas fa-star text-warning"></i> | {{dateFormat(review.dateTime) }}</p>
+                          </label>
                         </div>
-                        <div class="col text-end">
-                          <td colspan="2"><p :class="['badge', badge(reserve)]">{{ reserve.statusCodeType }}</p></td>
+                        <div class="col text-end mt-3">
+                          <button class="btn btn-danger" v-bind:disabled="!review.deleteReq" @click="deleteReview(review.reviewId)">삭제하기</button>
+                          <button class="btn btn-primary" v-bind:disabled="!review.deleteReq" @click="cancelDeleteReview(review.reviewId)">삭제거절</button>
+                          <p>({{ review.storeId }}). {{ review.storeName }}</p>
                         </div>
                       </div>
-                      <footer class="text-end blockquote-footer"><cite title="예약시기">{{ reserve.createAt }}</cite></footer>
-                    </blockquote>
-                    <div class="accordion accordion-flush" :id="reserve.reserveId">
-                      <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingOne">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse'+reserve.reserveId" aria-expanded="false" :aria-controls="'collapse'+reserve.reserveId">
-                            <p class="text-primary">예약내역 메뉴 자세히보기</p>
-                          </button>
-                        </h2>
-                      </div>
                     </div>
-                    
-                    <!-- 숨겨진 내용 -->
-                    <div class="collapse mt-3" :id="'collapse'+reserve.reserveId">
-                      <div class="card card-body">
-                        <p><strong>메뉴</strong></p>
-                        <ul>
-                          <li v-for="menu in reserve.payHistories" :key="menu.payHistoryId" class="menu-item">
-                            <span>{{ menu.menuName }} {{ menu.stock }}개 </span>
-                            <span>·············</span>
-                            <span>{{ menu.totalPrice }}원</span>
-                          </li>
-                        </ul>
-                        <p><strong>총 금액:</strong>{{ reserve.totalPriceBeforeDiscount }}원</p>
-                        <p v-if="reserve.payHistories[0].couponYN" class="text-danger"><strong>할인 금액:</strong><span> - {{ reserve.totalDiscountPrice }}원</span></p>
-                        <p v-if="reserve.payHistories[0].couponYN"><strong>할인 후 결제 금액:</strong>{{ reserve.totalPriceAfterDiscount }}원</p>
-                      </div>
+                    <div class="card-body">
+                      <blockquote class="blockquote mb-0">
+                        <div class="row">
+                          <div class="col">
+                            <div class="thumbnail-container">
+                              <img v-for="(image, index) in review.reviewImages" @click="openModal(review.reviewImages, index)" :src="image.url" class="thumbnail_image" alt="Sample Image" data-bs-toggle="modal" data-bs-target="#imageModal">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="mt-4">
+                          <span>
+                            {{ review.content }}
+                          </span>
+                        </div>
+                        <footer class="text-end mt-2 blockquote-footer"><cite title="리뷰번호">리뷰번호. {{ review.reviewId }}</cite></footer>
+                      </blockquote>
                     </div>
+                  </div>
+                  <div v-else>
+                    작성된 리뷰가 없습니다.
                   </div>
                 </div>
               </div>
@@ -220,6 +172,24 @@
         <!-- Footer Start -->
         <footer-component></footer-component>
         <!-- Footer End -->
+         
+        <!-- Modal -->
+        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <img :src="currentImage" class="img-fluid" alt="Enlarged Image">
+                <div class="mt-3">
+                  <button v-if="reviewImageLists.length > 1" @click="controlImages('prev')" class="btn btn-custom">이전</button>
+                  <button v-if="reviewImageLists.length > 1" @click="controlImages('next')" class="btn btn-custom">다음</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- Content End -->
       <!-- Back to Top -->
@@ -227,7 +197,7 @@
     </div>
 
     <script src="/js/admin/component.js"></script>
-    <script src="/js/admin/srAdminReserves.js"></script>
+    <script src="/js/admin/srAdminReviews.js"></script>
   </div>
   </body>
 </html>
