--- a/frontend/css/user/storeDetail.css
+++ b/frontend/css/user/storeDetail.css
@@ -67,27 +67,45 @@ body {
 }
 
 h2 {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
+    text-align: left;
 }
+/* menu 메뉴 */
 
 .menu-item {
+  
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-}
-
-.menu-image {
-    width: 80px;
-    height: auto;
-    border-radius: 5px;
-    margin-right: 10px;
+    border-bottom: 1px solid #ccc; /* 밑줄 추가 */
+    padding-bottom: 10px; /* 간격 설정 */
 }
 
 .menu-details {
-    flex-grow: 1;
+    
+    display: flex; /* Flexbox 사용 */
+    flex-direction: row; /* 수평 방향으로 배치 */
+    align-items: center; /* 세로 중앙 정렬 */
+    flex-grow: 1; /* 남은 공간 차지 */
 }
 
+.menu-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin-left: 10px; /* 이미지를 오른쪽으로 이동 */
+    object-fit: cover;
+}
 
+.menu-details h3 {
+    margin-right: 20px; /* 메뉴 이름과 가격 간의 간격 설정 */
+    margin-left: 10px;
+}
+
+.img_container{
+    width: 80px;
+    height: 80px;
+}
 
 .order {
     background-color: orange; /* 예약하기 버튼 색상 */
@@ -189,14 +207,10 @@ h2 {
     padding: 50px 0 40px ;
 }
 
-
-
-
-h2 {
-    margin-bottom: 15px;
-    text-align: left;
+.overGap{
+    margin: 40px 20px 30px;
+    color: #555;
 }
-
 
 
 /* 사진 */
@@ -273,3 +287,4 @@ h2 {
     font-size: 12px; /* 상세 정보 폰트 크기 */
     color: #777; /* 상세 정보 색상 */
 }
+
